# PropRelay

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  dump.rdb  pyproject.toml  seed_demo.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  database.py  main.py
app/agents/: __init__.py  graph.py  state.py
app/api/: router.py
app/core/: redis.py
app/graph/: builder.py  context.py  orchestrator.py  routing.py  state.py
app/models/: __init__.py  base.py  building.py  contractor.py  landlord.py  rent_payment.py  tenant.py  ticket.py
app/nodes/: __init__.py  clarify_intent.py  confirm_with_tenant.py  diagnose_issue.py  dispatch_contractor.py  find_contractor.py  forward_to_landlord.py  identify_intent.py  log_complaint.py  notify_landlord.py  notify_rejection.py  prepare_approval.py  rent_status.py  request_photo.py  self_help.py
app/schemas/: __init__.py  building.py  contractor.py  landlord.py  llm_outputs.py  tenant.py  ticket.py
app/services/: ai_service.py  claude_service.py  contractor_selection.py  contractor_service.py  landlord_commands.py  onboarding_service.py  registration.py  rent_service.py  tenant_lookup.py  ticket_service.py  whatsapp.py
app/storage/: __init__.py  pending_routes.py  redis_checkpoint.py
docs/: ORCHESTRATION.md
examples/: webhook_payloads.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: visualize_graph.py
tests/: conftest.py  test_onboarding.py  test_orchestration.py  test_webhook.py
(+25 files in other folders)
